--- a/_posts/2015-2-8-risp.md
+++ b/_posts/2015-2-8-risp.md
@@ -56,7 +56,7 @@ define 会在环境中加入 length 的定义，length 便可正常调用了。
 # TODO
 <ul>
 <li>用户定义的 Macro</li>
-<li>尾递归优化</li>
-<li>continuation</li>
+<li><del>尾递归优化</del>(2015/6/8)</li>
+<li><del>continuation</del>(2015/6/8)</li>
 </ul>
 
